[package]
name = "callbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64-simd = "0.8.0"
hyper_req_exts = "0.18.0"
lazy_static = "1.4.0"
regex = "1.8.1"
reqwest = { version = "0.11.17", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.28.0", features = ["macros", "full"] }
[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10.52", features = ["vendored"] }
