[package]
name = "callbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64-simd = "0.8.0"
hyper_req_exts = "0.18.0"
lazy_static = "1.4.0"
regex = "1.10.3"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.36.0", features = ["macros", "full"] }
[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10.63", features = ["vendored"] }
