[package]
name = "callbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", default-features = false }
base64-simd = "0.8.0"
futures = { version = "0.3.30", default-features = false }
lazy_static = "1.4.0"
regex = "1.10.3"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
shuttle-axum = "0.38.0"
shuttle-runtime = "0.38.0"
# [target.'cfg(target_os = "linux")'.dependencies]
# openssl = { version = "0.10.63", features = ["vendored"] }
